styles.css
body{
    display: grid;
    justify-content: center;
}


.calculator{
    display: grid;
    grid-template: 1fr 1fr 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr;
    max-width: 300px;
    height: 400px;
    border: 3px solid black;
    padding: 16px;
    background-color: grey;

    gap: 3px;
    
}

.display{
    grid-column: 1 / 5;
    border: 3px solid black;
    background-color: white;
    padding-right: 5px;
    padding-bottom: 4px;
    margin-bottom: 16px;

    display: flex;
    justify-content: flex-end;

    height: 64px;

}

button{
    font-size: 20px;
}

p {
    display: inline;
    font-size: 32px;
}

